<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".inicial">




    <ImageView
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/logopt" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edNome"
            android:layout_width="384dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:hint="Condominio"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edCondominio"
            android:layout_width="384dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:hint="Função"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edFuncao"
            android:layout_width="384dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edEmail"
            android:layout_width="384dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/senha"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edSenha1"
            android:layout_width="384dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/senha"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edConfSenha"
            android:layout_width="384dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCadastrar1"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="Cadastrar"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <Button
        android:id="@+id/btnCancel1"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:text="Cancela" />
</LinearLayout>