<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="false"
    android:background="@drawable/reg"

    android:orientation="vertical"
    tools:context=".TelaPrincincipal">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_gravity="center"

        android:addStatesFromChildren="false"
        android:animationCache="false"
        android:background="#4F4F4F"
        android:elevation="2dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewNomeCondominio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:text="@string/condominio" />

        <TextView
            android:id="@+id/textnomeUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="2dp"
            android:textColor="#ffffff"
            android:text="@string/nome" />


        <TextView
            android:id="@+id/textViewfuncao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="2dp"
            android:textColor="#ffffff"
            android:text="@string/fun_o" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/botaotelalistaAtiva"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/correspativas"
                android:text="" />

            <Button
                android:id="@+id/buttonovascorrrespondencias"
                android:layout_width="150dp"
                android:layout_height="100dp"


                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/novascorresp"
                android:text="" />

            <Button
                android:id="@+id/buttonLeituras"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@mipmap/leituraeconsumo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button4consultas"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/consultcorresp"
                android:text=""
                tools:text="" />

            <Button
                android:id="@+id/button2novareserva"
                android:layout_width="150dp"
                android:layout_height="100dp"

                android:layout_marginLeft="8dp"

                android:layout_marginTop="10dp"
                android:background="@drawable/reservas"
                android:text="" />

            <Button
                android:id="@+id/buttonreserva"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/reg"
                android:text="Leituras dos aptos"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarPricipal"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="gone" />


</LinearLayout>